--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,4 +6,4 @@ pipelines:
         script:
           - echo "Starting pipeline..."
           - pip install -r requirements.txt
-          - pip install telebot flask pytz psutil aiogram pymongo aiohttp python-telegram-bot && chmod +x soul && python3 m.py
+          - pip install telebot flask pytz psutil aiogram pymongo aiohttp python-telegram-bot && chmod +x bgmi && python3 main.py
